--- a/test.html
+++ b/test.html
@@ -7,7 +7,7 @@
         #circle {
             width: 50px;
             height: 50px;
-            background-color: red;
+            background-color: green;
             border-radius: 50%;
             position: absolute;
             transform: translate(-50%, -50%);
